--- a/index.html
+++ b/index.html
@@ -1,11 +1,161 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1></h1>
+    <header>
+        <nav>
+            <h1 class="nome">Júlia Marques</h1>
+
+            <ul class="nav_list">
+                <li>Seção 1</li>
+                <li>Seção 2</li>
+                <li>Seção 3</li>
+            </ul>
+            <h3>Perfil</h3>
+            <hr>
+        </nav>
+    </header>
+    <section class="perfil">
+        <img class="img_principal" src="imagens/fotojulia.jpeg" alt="" width="225px" height="200px">
+
+        <h3 class="nome_perfil">Júlia Marques</h3>
+
+        <p class="descrição">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea explicabo quas nemo? Repellat
+            harum deleniti corrupti dicta quibusdam excepturi magnam error ut beatae expedita a nostrum eligendi, quae,
+            repellendus similique.</p>
+        <ul class="loc_list">
+            <b>
+                <li>Localização:</li>
+            </b>
+            <li>Lorem ipsum dolor sit amet.</li>
+        </ul>
+        <ul class="site_list">
+            <b>
+                <li>Site:</li>
+            </b>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+        </ul>
+
+        <ul class="icons">
+            <li> <img src="imagens/square-facebook.svg" alt="" width="40px" height="40px"> </li>
+            <li> <img src="imagens/twitter.svg" alt="" width="40px" height="40px"> </li>
+            <li> <img src="imagens/instagram.svg" alt="" width="40px" height="40px"> </li>
+        </ul>
+        <div class="user">
+            <img src="imagens/user.png" alt="" width="30px">
+            <h6>05</h6>
+        </div>
+  </section>
+  <h3 class="rep">Repositórios (3)</h3> 
+<hr>
+
+  <section class="repositorios">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora provident minus vitae dolores dolor magnam sunt laudantium, adipisci voluptatem deserunt alias consequatur error culpa, ut quidem. Quibusdam, blanditiis consequuntur. Laudantium?</p>  <img cla src="imagens/star.png" alt="" width="20px"> <div class="img_rep"><h6>0</h6></div> <img src="imagens/user.png" alt="" width="20px"> <h6>0</h6></div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus officiis illo dolores nesciunt perspiciatis nisi mollitia, temporibus iste dolore ab corrupti, quas, eum quos iusto suscipit minima. Officiis, ea voluptates?</p>  <img src="imagens/star.png" alt="" width="20px"> <div class="img_rep"> <h6>0</h6></div> <img src="imagens/user.png" alt="" width="20px"> <h6>0</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, ab aliquid cumque vero quam illo, consequatur explicabo ratione animi aliquam quasi quisquam. Voluptate saepe, expedita harum iure quaerat a ducimus.</p>  <img src="imagens/star.png" alt="" width="20px"> <div class="img_rep"><h6>0</h6></div>  <img src="imagens/user.png" alt="" width="20px"> <h6>0</h6>
+        </div>
+      </div>
+    </div>
+  </div>  
+</section>
+    <section class="conteudo">
+        <h3 class="conteudo_sugerido">Conteúdo sugerido</h3>
+        <hr>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="imagens/fotojulia.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </section> 
+    <h3>Colegas de trabalho</h3>
+    <hr>
+    <section class="colegas">
+        <div class="container_colegas">
+            <div class="row">
+              <div class="col">
+                <img src="imagens/Marcela Costa.jpeg" alt="" width="100px"><br><a href="aaaaa">Marcela Costa</a>
+              </div>
+              <div class="col">
+                <img src="imagens/Paulo Moreira.jpeg" alt="" width="100px"><br><a href="aaaaa">Paulo Moreira</a>
+              </div>
+              <div class="col">
+                <img src="imagens/sonia abreu.jpeg" alt="" width="100px"><br><a href="aaaaa">Sônia Abreu</a>
+              </div>
+              <div class="col">
+                <img src="imagens/janaina marques.jpeg" alt="" width="100px"><br><a href="aaaaa">Janaina Marques</a>
+              </div>
+              <div class="col">
+                <img src="imagens/Mariana Guerra.jpeg" alt="" width="100px"><br><a href="aaaaa">Marcela Costa</a>
+              </div>
+            </div>
+          </div>
+    </section>
+    <footer>
+        <div class="rodapé">
+            <p>&copy; 2024 Júlia Marques. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
